src/libqpainter.h

typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
typedef struct QFontMetrics QFontMetrics;
typedef struct QLine QLine;
typedef struct QLineF QLineF;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPen QPen;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QTransform QTransform;
QPainter* QPainter_new();
QPainter* QPainter_new2(QPaintDevice* param1);
QPaintDevice* QPainter_Device(const QPainter* self);
bool QPainter_Begin(QPainter* self, QPaintDevice* param1);
bool QPainter_End(QPainter* self);
bool QPainter_IsActive(const QPainter* self);
void QPainter_SetCompositionMode(QPainter* self, int mode);
int QPainter_CompositionMode(const QPainter* self);
QFont* QPainter_Font(const QPainter* self);
void QPainter_SetFont(QPainter* self, QFont* f);
QFontMetrics* QPainter_FontMetrics(const QPainter* self);
QFontInfo* QPainter_FontInfo(const QPainter* self);
void QPainter_SetPen(QPainter* self, QColor* color);
void QPainter_SetPenWithPen(QPainter* self, QPen* pen);
void QPainter_SetPenWithStyle(QPainter* self, int style);
QPen* QPainter_Pen(const QPainter* self);
void QPainter_SetBrush(QPainter* self, QBrush* brush);
void QPainter_SetBrushWithStyle(QPainter* self, int style);
QBrush* QPainter_Brush(const QPainter* self);
void QPainter_SetBackgroundMode(QPainter* self, int mode);
int QPainter_BackgroundMode(const QPainter* self);
QPoint* QPainter_BrushOrigin(const QPainter* self);
void QPainter_SetBrushOrigin(QPainter* self, int x, int y);
void QPainter_SetBrushOriginWithBrushOrigin(QPainter* self, QPoint* brushOrigin);
void QPainter_SetBrushOrigin2(QPainter* self, QPointF* brushOrigin);
void QPainter_SetBackground(QPainter* self, QBrush* bg);
QBrush* QPainter_Background(const QPainter* self);
double QPainter_Opacity(const QPainter* self);
void QPainter_SetOpacity(QPainter* self, double opacity);
QRegion* QPainter_ClipRegion(const QPainter* self);
QPainterPath* QPainter_ClipPath(const QPainter* self);
void QPainter_SetClipRect(QPainter* self, QRectF* param1);
void QPainter_SetClipRectWithQRect(QPainter* self, QRect* param1);
void QPainter_SetClipRect2(QPainter* self, int x, int y, int w, int h);
void QPainter_SetClipRegion(QPainter* self, QRegion* param1);
void QPainter_SetClipPath(QPainter* self, QPainterPath* path);
void QPainter_SetClipping(QPainter* self, bool enable);
bool QPainter_HasClipping(const QPainter* self);
QRectF* QPainter_ClipBoundingRect(const QPainter* self);
void QPainter_Save(QPainter* self);
void QPainter_Restore(QPainter* self);
void QPainter_SetTransform(QPainter* self, QTransform* transform);
QTransform* QPainter_Transform(const QPainter* self);
QTransform* QPainter_DeviceTransform(const QPainter* self);
void QPainter_ResetTransform(QPainter* self);
void QPainter_SetWorldTransform(QPainter* self, QTransform* matrix);
QTransform* QPainter_WorldTransform(const QPainter* self);
QTransform* QPainter_CombinedTransform(const QPainter* self);
void QPainter_SetWorldMatrixEnabled(QPainter* self, bool enabled);
bool QPainter_WorldMatrixEnabled(const QPainter* self);
void QPainter_Scale(QPainter* self, double sx, double sy);
void QPainter_Shear(QPainter* self, double sh, double sv);
void QPainter_Rotate(QPainter* self, double a);
void QPainter_Translate(QPainter* self, QPointF* offset);
void QPainter_TranslateWithOffset(QPainter* self, QPoint* offset);
void QPainter_Translate2(QPainter* self, double dx, double dy);
QRect* QPainter_Window(const QPainter* self);
void QPainter_SetWindow(QPainter* self, QRect* window);
void QPainter_SetWindow2(QPainter* self, int x, int y, int w, int h);
QRect* QPainter_Viewport(const QPainter* self);
void QPainter_SetViewport(QPainter* self, QRect* viewport);
void QPainter_SetViewport2(QPainter* self, int x, int y, int w, int h);
void QPainter_SetViewTransformEnabled(QPainter* self, bool enable);
bool QPainter_ViewTransformEnabled(const QPainter* self);
void QPainter_StrokePath(QPainter* self, QPainterPath* path, QPen* pen);
void QPainter_FillPath(QPainter* self, QPainterPath* path, QBrush* brush);
void QPainter_DrawPath(QPainter* self, QPainterPath* path);
void QPainter_DrawPoint(QPainter* self, QPointF* pt);
void QPainter_DrawPointWithQPoint(QPainter* self, QPoint* p);
void QPainter_DrawPoint2(QPainter* self, int x, int y);
void QPainter_DrawPoints(QPainter* self, QPointF* points, int pointCount);
void QPainter_DrawPoints2(QPainter* self, QPoint* points, int pointCount);
void QPainter_DrawLine(QPainter* self, QLineF* line);
void QPainter_DrawLineWithLine(QPainter* self, QLine* line);
void QPainter_DrawLine2(QPainter* self, int x1, int y1, int x2, int y2);
void QPainter_DrawLine3(QPainter* self, QPoint* p1, QPoint* p2);
void QPainter_DrawLine4(QPainter* self, QPointF* p1, QPointF* p2);
void QPainter_DrawLines(QPainter* self, QLineF* lines, int lineCount);
void QPainter_DrawLinesWithLines(QPainter* self, libqt_list /* of QLineF* */ lines);
void QPainter_DrawLines2(QPainter* self, QPointF* pointPairs, int lineCount);
void QPainter_DrawLinesWithPointPairs(QPainter* self, libqt_list /* of QPointF* */ pointPairs);
void QPainter_DrawLines3(QPainter* self, QLine* lines, int lineCount);
void QPainter_DrawLines4(QPainter* self, libqt_list /* of QLine* */ lines);
void QPainter_DrawLines5(QPainter* self, QPoint* pointPairs, int lineCount);
void QPainter_DrawLines6(QPainter* self, libqt_list /* of QPoint* */ pointPairs);
void QPainter_DrawRect(QPainter* self, QRectF* rect);
void QPainter_DrawRect2(QPainter* self, int x1, int y1, int w, int h);
void QPainter_DrawRectWithRect(QPainter* self, QRect* rect);
void QPainter_DrawRects(QPainter* self, QRectF* rects, int rectCount);
void QPainter_DrawRectsWithRectangles(QPainter* self, libqt_list /* of QRectF* */ rectangles);
void QPainter_DrawRects2(QPainter* self, QRect* rects, int rectCount);
void QPainter_DrawRects3(QPainter* self, libqt_list /* of QRect* */ rectangles);
void QPainter_DrawEllipse(QPainter* self, QRectF* r);
void QPainter_DrawEllipseWithQRect(QPainter* self, QRect* r);
void QPainter_DrawEllipse2(QPainter* self, int x, int y, int w, int h);
void QPainter_DrawEllipse3(QPainter* self, QPointF* center, double rx, double ry);
void QPainter_DrawEllipse4(QPainter* self, QPoint* center, int rx, int ry);
void QPainter_DrawPolyline(QPainter* self, QPointF* points, int pointCount);
void QPainter_DrawPolyline2(QPainter* self, QPoint* points, int pointCount);
void QPainter_DrawPolygon(QPainter* self, QPointF* points, int pointCount);
void QPainter_DrawPolygon2(QPainter* self, QPoint* points, int pointCount);
void QPainter_DrawConvexPolygon(QPainter* self, QPointF* points, int pointCount);