src/qt/libqpainter.bf

public struct QPainter
{
	[LinkName("QPainter_new")]
	public static extern QPainter* QPainter_new();
	[LinkName("QPainter_new2")]
	public static extern QPainter* QPainter_new2(QPaintDevice* param1);
	[LinkName("QPainter_Device")]
	public static extern QPaintDevice* QPainter_Device(Self* c_this);
	[LinkName("QPainter_Begin")]
	public static extern bool QPainter_Begin(Self* c_this, QPaintDevice* param1);
	[LinkName("QPainter_End")]
	public static extern bool QPainter_End(Self* c_this);
	[LinkName("QPainter_IsActive")]
	public static extern bool QPainter_IsActive(Self* c_this);
	[LinkName("QPainter_SetCompositionMode")]
	public static extern void QPainter_SetCompositionMode(Self* c_this, int64 mode);
	[LinkName("QPainter_CompositionMode")]
	public static extern int64 QPainter_CompositionMode(Self* c_this);
	[LinkName("QPainter_Font")]
	public static extern QFont* QPainter_Font(Self* c_this);
	[LinkName("QPainter_SetFont")]
	public static extern void QPainter_SetFont(Self* c_this, QFont* f);
	[LinkName("QPainter_FontMetrics")]
	public static extern QFontMetrics QPainter_FontMetrics(Self* c_this);
	[LinkName("QPainter_FontInfo")]
	public static extern QFontInfo QPainter_FontInfo(Self* c_this);
	[LinkName("QPainter_SetPen")]
	public static extern void QPainter_SetPen(Self* c_this, QColor* color);
	[LinkName("QPainter_SetPenWithPen")]
	public static extern void QPainter_SetPenWithPen(Self* c_this, QPen* pen);
	[LinkName("QPainter_SetPenWithStyle")]
	public static extern void QPainter_SetPenWithStyle(Self* c_this, int64 style);
	[LinkName("QPainter_Pen")]
	public static extern QPen* QPainter_Pen(Self* c_this);
	[LinkName("QPainter_SetBrush")]
	public static extern void QPainter_SetBrush(Self* c_this, QBrush* brush);
	[LinkName("QPainter_SetBrushWithStyle")]
	public static extern void QPainter_SetBrushWithStyle(Self* c_this, int64 style);
	[LinkName("QPainter_Brush")]
	public static extern QBrush* QPainter_Brush(Self* c_this);
	[LinkName("QPainter_SetBackgroundMode")]
	public static extern void QPainter_SetBackgroundMode(Self* c_this, int64 mode);
	[LinkName("QPainter_BackgroundMode")]
	public static extern int64 QPainter_BackgroundMode(Self* c_this);
	[LinkName("QPainter_BrushOrigin")]
	public static extern QPoint QPainter_BrushOrigin(Self* c_this);
	[LinkName("QPainter_SetBrushOrigin")]
	public static extern void QPainter_SetBrushOrigin(Self* c_this, int32 x, int32 y);
	[LinkName("QPainter_SetBrushOriginWithBrushOrigin")]
	public static extern void QPainter_SetBrushOriginWithBrushOrigin(Self* c_this, QPoint* brushOrigin);
	[LinkName("QPainter_SetBrushOrigin2")]
	public static extern void QPainter_SetBrushOrigin2(Self* c_this, QPointF* brushOrigin);
	[LinkName("QPainter_SetBackground")]
	public static extern void QPainter_SetBackground(Self* c_this, QBrush* bg);
	[LinkName("QPainter_Background")]
	public static extern QBrush* QPainter_Background(Self* c_this);
	[LinkName("QPainter_Opacity")]
	public static extern double QPainter_Opacity(Self* c_this);
	[LinkName("QPainter_SetOpacity")]
	public static extern void QPainter_SetOpacity(Self* c_this, double opacity);
	[LinkName("QPainter_ClipRegion")]
	public static extern QRegion QPainter_ClipRegion(Self* c_this);
	[LinkName("QPainter_ClipPath")]
	public static extern QPainterPath QPainter_ClipPath(Self* c_this);
	[LinkName("QPainter_SetClipRect")]
	public static extern void QPainter_SetClipRect(Self* c_this, QRectF* param1);
	[LinkName("QPainter_SetClipRectWithQRect")]
	public static extern void QPainter_SetClipRectWithQRect(Self* c_this, QRect* param1);
	[LinkName("QPainter_SetClipRect2")]
	public static extern void QPainter_SetClipRect2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QPainter_SetClipRegion")]
	public static extern void QPainter_SetClipRegion(Self* c_this, QRegion* param1);
	[LinkName("QPainter_SetClipPath")]
	public static extern void QPainter_SetClipPath(Self* c_this, QPainterPath* path);
	[LinkName("QPainter_SetClipping")]
	public static extern void QPainter_SetClipping(Self* c_this, bool enable);
	[LinkName("QPainter_HasClipping")]
	public static extern bool QPainter_HasClipping(Self* c_this);
	[LinkName("QPainter_ClipBoundingRect")]
	public static extern QRectF QPainter_ClipBoundingRect(Self* c_this);
	[LinkName("QPainter_Save")]
	public static extern void QPainter_Save(Self* c_this);
	[LinkName("QPainter_Restore")]
	public static extern void QPainter_Restore(Self* c_this);
	[LinkName("QPainter_SetTransform")]
	public static extern void QPainter_SetTransform(Self* c_this, QTransform* transform);
	[LinkName("QPainter_Transform")]
	public static extern QTransform* QPainter_Transform(Self* c_this);
	[LinkName("QPainter_DeviceTransform")]
	public static extern QTransform* QPainter_DeviceTransform(Self* c_this);
	[LinkName("QPainter_ResetTransform")]
	public static extern void QPainter_ResetTransform(Self* c_this);
	[LinkName("QPainter_SetWorldTransform")]
	public static extern void QPainter_SetWorldTransform(Self* c_this, QTransform* matrix);
	[LinkName("QPainter_WorldTransform")]
	public static extern QTransform* QPainter_WorldTransform(Self* c_this);
	[LinkName("QPainter_CombinedTransform")]
	public static extern QTransform QPainter_CombinedTransform(Self* c_this);
	[LinkName("QPainter_SetWorldMatrixEnabled")]
	public static extern void QPainter_SetWorldMatrixEnabled(Self* c_this, bool enabled);
	[LinkName("QPainter_WorldMatrixEnabled")]
	public static extern bool QPainter_WorldMatrixEnabled(Self* c_this);
	[LinkName("QPainter_Scale")]
	public static extern void QPainter_Scale(Self* c_this, double sx, double sy);
	[LinkName("QPainter_Shear")]
	public static extern void QPainter_Shear(Self* c_this, double sh, double sv);
	[LinkName("QPainter_Rotate")]
	public static extern void QPainter_Rotate(Self* c_this, double a);
	[LinkName("QPainter_Translate")]
	public static extern void QPainter_Translate(Self* c_this, QPointF* offset);
	[LinkName("QPainter_TranslateWithOffset")]
	public static extern void QPainter_TranslateWithOffset(Self* c_this, QPoint* offset);
	[LinkName("QPainter_Translate2")]
	public static extern void QPainter_Translate2(Self* c_this, double dx, double dy);
	[LinkName("QPainter_Window")]
	public static extern QRect QPainter_Window(Self* c_this);
	[LinkName("QPainter_SetWindow")]
	public static extern void QPainter_SetWindow(Self* c_this, QRect* window);
	[LinkName("QPainter_SetWindow2")]
	public static extern void QPainter_SetWindow2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QPainter_Viewport")]
	public static extern QRect QPainter_Viewport(Self* c_this);
	[LinkName("QPainter_SetViewport")]
	public static extern void QPainter_SetViewport(Self* c_this, QRect* viewport);
	[LinkName("QPainter_SetViewport2")]
	public static extern void QPainter_SetViewport2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QPainter_SetViewTransformEnabled")]
	public static extern void QPainter_SetViewTransformEnabled(Self* c_this, bool enable);
	[LinkName("QPainter_ViewTransformEnabled")]
	public static extern bool QPainter_ViewTransformEnabled(Self* c_this);
	[LinkName("QPainter_StrokePath")]
	public static extern void QPainter_StrokePath(Self* c_this, QPainterPath* path, QPen* pen);
	[LinkName("QPainter_FillPath")]
	public static extern void QPainter_FillPath(Self* c_this, QPainterPath* path, QBrush* brush);
	[LinkName("QPainter_DrawPath")]
	public static extern void QPainter_DrawPath(Self* c_this, QPainterPath* path);
	[LinkName("QPainter_DrawPoint")]
	public static extern void QPainter_DrawPoint(Self* c_this, QPointF* pt);
	[LinkName("QPainter_DrawPointWithQPoint")]
	public static extern void QPainter_DrawPointWithQPoint(Self* c_this, QPoint* p);
	[LinkName("QPainter_DrawPoint2")]
	public static extern void QPainter_DrawPoint2(Self* c_this, int32 x, int32 y);
	[LinkName("QPainter_DrawPoints")]
	public static extern void QPainter_DrawPoints(Self* c_this, QPointF* points, int32 pointCount);
	[LinkName("QPainter_DrawPoints2")]
	public static extern void QPainter_DrawPoints2(Self* c_this, QPoint* points, int32 pointCount);
	[LinkName("QPainter_DrawLine")]
	public static extern void QPainter_DrawLine(Self* c_this, QLineF* line);
	[LinkName("QPainter_DrawLineWithLine")]
	public static extern void QPainter_DrawLineWithLine(Self* c_this, QLine* line);
	[LinkName("QPainter_DrawLine2")]
	public static extern void QPainter_DrawLine2(Self* c_this, int32 x1, int32 y1, int32 x2, int32 y2);
	[LinkName("QPainter_DrawLine3")]
	public static extern void QPainter_DrawLine3(Self* c_this, QPoint* p1, QPoint* p2);
	[LinkName("QPainter_DrawLine4")]
	public static extern void QPainter_DrawLine4(Self* c_this, QPointF* p1, QPointF* p2);
	[LinkName("QPainter_DrawLines")]
	public static extern void QPainter_DrawLines(Self* c_this, QLineF* lines, int32 lineCount);
	[LinkName("QPainter_DrawLinesWithLines")]
	public static extern void QPainter_DrawLinesWithLines(Self* c_this, QLineF[] lines);
	[LinkName("QPainter_DrawLines2")]
	public static extern void QPainter_DrawLines2(Self* c_this, QPointF* pointPairs, int32 lineCount);
	[LinkName("QPainter_DrawLinesWithPointPairs")]
	public static extern void QPainter_DrawLinesWithPointPairs(Self* c_this, QPointF[] pointPairs);
	[LinkName("QPainter_DrawLines3")]
	public static extern void QPainter_DrawLines3(Self* c_this, QLine* lines, int32 lineCount);
	[LinkName("QPainter_DrawLines4")]
	public static extern void QPainter_DrawLines4(Self* c_this, QLine[] lines);
	[LinkName("QPainter_DrawLines5")]
	public static extern void QPainter_DrawLines5(Self* c_this, QPoint* pointPairs, int32 lineCount);
	[LinkName("QPainter_DrawLines6")]
	public static extern void QPainter_DrawLines6(Self* c_this, QPoint[] pointPairs);
	[LinkName("QPainter_DrawRect")]
	public static extern void QPainter_DrawRect(Self* c_this, QRectF* rect);
	[LinkName("QPainter_DrawRect2")]
	public static extern void QPainter_DrawRect2(Self* c_this, int32 x1, int32 y1, int32 w, int32 h);
	[LinkName("QPainter_DrawRectWithRect")]
	public static extern void QPainter_DrawRectWithRect(Self* c_this, QRect* rect);
	[LinkName("QPainter_DrawRects")]
	public static extern void QPainter_DrawRects(Self* c_this, QRectF* rects, int32 rectCount);
	[LinkName("QPainter_DrawRectsWithRectangles")]
	public static extern void QPainter_DrawRectsWithRectangles(Self* c_this, QRectF[] rectangles);
	[LinkName("QPainter_DrawRects2")]
	public static extern void QPainter_DrawRects2(Self* c_this, QRect* rects, int32 rectCount);
	[LinkName("QPainter_DrawRects3")]
	public static extern void QPainter_DrawRects3(Self* c_this, QRect[] rectangles);
	[LinkName("QPainter_DrawEllipse")]
	public static extern void QPainter_DrawEllipse(Self* c_this, QRectF* r);
	[LinkName("QPainter_DrawEllipseWithQRect")]
	public static extern void QPainter_DrawEllipseWithQRect(Self* c_this, QRect* r);
	[LinkName("QPainter_DrawEllipse2")]
	public static extern void QPainter_DrawEllipse2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QPainter_DrawEllipse3")]
	public static extern void QPainter_DrawEllipse3(Self* c_this, QPointF* center, double rx, double ry);
	[LinkName("QPainter_DrawEllipse4")]
	public static extern void QPainter_DrawEllipse4(Self* c_this, QPoint* center, int32 rx, int32 ry);
	[LinkName("QPainter_DrawPolyline")]
	public static extern void QPainter_DrawPolyline(Self* c_this, QPointF* points, int32 pointCount);
	[LinkName("QPainter_DrawPolyline2")]
	public static extern void QPainter_DrawPolyline2(Self* c_this, QPoint* points, int32 pointCount);
	[LinkName("QPainter_DrawPolygon")]
	public static extern void QPainter_DrawPolygon(Self* c_this, QPointF* points, int32 pointCount);
	[LinkName("QPainter_DrawPolygon2")]
	public static extern void QPainter_DrawPolygon2(Self* c_this, QPoint* points, int32 pointCount);
	[LinkName("QPainter_DrawConvexPolygon")]
	public static extern void QPainter_DrawConvexPolygon(Self* c_this, QPointF* points, int32 pointCount);
